name:                simsim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simsim#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimSim
  other-modules:       SimSim.Order
                     , SimSim.Block
                     , SimSim.Dispatch
                     , SimSim.Dispatch.FirstComeFirstServe
                     , SimSim.ProductType
                     , SimSim.Routing
                     , SimSim.Simulation
                     , SimSim.Simulation.Type
                     , SimSim.Simulation.Ops
                     , SimSim.Time
                     , SimSim.Order.Type
                     , SimSim.Runner
                     , SimSim.ProcessingTime
                     , SimSim.ProcessingTime.Type
                     , SimSim.ProcessingTime.Ops
                     , SimSim.Period
                     , SimSim.Release
                     , SimSim.Release.ImmediateRelease
                     , SimSim.Runner.Runner
                     , SimSim.Runner.Fgi
                     , SimSim.Runner.Machine
                     , SimSim.Runner.Queue
                     , SimSim.Runner.Util
                     , SimSim.Runner.Dispatch
                     , SimSim.Runner.Server
                     , SimSim.Runner.Sink
                     , SimSim.Runner.Release
                     , SimSim.Statistics
                     , SimSim.Statistics.Ops
                     , SimSim.Statistics.Pretty
                     , SimSim.Statistics.Type
                     , SimSim.Shipment
                     , SimSim.Shipment.OnDueDate
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , pipes
                     , containers
                     , mono-traversable
                     , text
                     , random
                     , classy-prelude
                     , mtl
                     , monad-logger >= 0.2.2
                     , ansi-wl-pprint

  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts

  default-language:    Haskell2010

executable simsim-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , pipes
                     , containers
                     , simsim
                     , random
                     , transformers
                     , foundation
                     , mono-traversable
                     , classy-prelude
                     , time
                     , monad-logger >= 0.2.2
                     , ansi-wl-pprint

  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts


test-suite simsim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transformers
                     , simsim
                     , classy-prelude
                     , foundation
                     , mono-traversable

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/githubuser/simsim
