name:                simsim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simsim#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimSim
                     , SimSim.Order
                     , SimSim.Order.Type
                     , SimSim.Order.Pretty
                     , SimSim.Block
                     , SimSim.Dispatch
                     , SimSim.Dispatch.Type
                     , SimSim.Dispatch.FirstComeFirstServe
                     , SimSim.Dispatch.PrioritizeProduct
                     , SimSim.ProductType
                     , SimSim.Routing
                     , SimSim.Simulation
                     , SimSim.Simulation.Pretty
                     , SimSim.Simulation.Type
                     , SimSim.Simulation.Ops
                     , SimSim.Time
                     , SimSim.Time.Type
                     , SimSim.Time.Pretty
                     , SimSim.Runner
                     , SimSim.ProcessingTime
                     , SimSim.ProcessingTime.Type
                     , SimSim.ProcessingTime.Ops
                     , SimSim.Period
                     , SimSim.Release
                     , SimSim.Release.Type
                     , SimSim.Release.ImmediateRelease
                     , SimSim.Runner.Runner
                     , SimSim.Runner.Fgi
                     , SimSim.Runner.Machine
                     , SimSim.Runner.Queue
                     , SimSim.Runner.Util
                     , SimSim.Runner.Dispatch
                     , SimSim.Runner.Server
                     , SimSim.Runner.Sink
                     , SimSim.Runner.Release
                     , SimSim.Statistics
                     , SimSim.Statistics.Internal
                     , SimSim.Statistics.Ops
                     , SimSim.Statistics.Pretty
                     , SimSim.Statistics.Type
                     , SimSim.Shipment
                     , SimSim.Shipment.Type
                     , SimSim.Shipment.OnDueDate
  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , pipes
                     , containers
                     , mono-traversable
                     , text
                     , random
                     , classy-prelude
                     , mtl
                     , monad-logger >= 0.2.2
                     , ansi-wl-pprint

  default-extensions: NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts

  default-language:    Haskell2010

executable simsim-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , pipes
                     , containers
                     , simsim
                     , random
                     , transformers
                     , foundation
                     , mono-traversable
                     , classy-prelude
                     , time
                     , monad-logger >= 0.2.2
                     , ansi-wl-pprint

  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts


test-suite simsim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transformers
                     , simsim
                     , classy-prelude
                     , foundation
                     , mono-traversable
                     , hspec
                     , QuickCheck
                     , containers
                     , random
  other-modules:
                     TestSimSim.Block.Instances
                     TestSimSim.Block.BlockSpec
                     TestSimSim.Simulation.Instances
                     TestSimSim.Simulation.SimulationSpec
                     TestSimSim.ProcessingTime.Instances
                     TestSimSim.Routing.Instances
                     TestSimSim.Statistics.Instances
                     TestSimSim.Statistics.StatisticsSpec
                     TestSimSim.Release.Instances
                     TestSimSim.ProductType.Instances
                     TestSimSim.Time.Instances
                     TestSimSim.Order.Instances
                     TestSimSim.Order.OrderSpec


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/githubuser/simsim
